[gd_scene load_steps=23 format=2]

[ext_resource path="res://src/Level2.gd" type="Script" id=1]
[ext_resource path="res://scenes/GelAlcohol.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/Interface.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/PersonWithoutMask.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/StartLevel.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/PersonWithMask.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/Police.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/PersonVisiblySick.tscn" type="PackedScene" id=9]
[ext_resource path="res://scenes/HCQS.tscn" type="PackedScene" id=10]
[ext_resource path="res://scenes/Permit.tscn" type="PackedScene" id=11]
[ext_resource path="res://scenes/Mask.tscn" type="PackedScene" id=12]
[ext_resource path="res://scenes/CDS.tscn" type="PackedScene" id=13]
[ext_resource path="res://scenes/Gendarme.tscn" type="PackedScene" id=14]
[ext_resource path="res://scenes/EndLevel.tscn" type="PackedScene" id=15]
[ext_resource path="res://scenes/Wall.tscn" type="PackedScene" id=16]
[ext_resource path="res://assets/art/items/egg.png" type="Texture" id=17]
[ext_resource path="res://scenes/Shelf.tscn" type="PackedScene" id=18]
[ext_resource path="res://scenes/Egg.tscn" type="PackedScene" id=19]
[ext_resource path="res://assets/art/GUI/default_theme/default_theme.tres" type="Theme" id=20]
[ext_resource path="res://scenes/GUI/Counter.tscn" type="PackedScene" id=21]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 5000, 0, 0, 0, 0, 0, 5000, 3500, 0, 0, 0, 0, 0, 3500, 0, 0, 0, 0, 0, 0 )
}

[node name="Level2" type="Node"]
script = ExtResource( 1 )
MaskPackage = ExtResource( 12 )
CDSPackage = ExtResource( 13 )
HCQSPackage = ExtResource( 10 )
GelAlcoholPackage = ExtResource( 2 )
PermitPackage = ExtResource( 11 )
Egg = ExtResource( 19 )
StartLevel = ExtResource( 6 )
EndLevel = ExtResource( 15 )
PersonWithMaskPackage = ExtResource( 7 )
PersonWithoutMaskPackage = ExtResource( 5 )
PersonVisiblySickPackage = ExtResource( 9 )
GendarmePackage = ExtResource( 14 )
PolicePackage = ExtResource( 8 )

[node name="HUDLayer" type="CanvasLayer" parent="."]

[node name="Interface" parent="HUDLayer" instance=ExtResource( 3 )]
margin_left = 0.769897
margin_top = -0.982788
margin_right = 0.769897
margin_bottom = -0.982788

[node name="EggCounter" parent="HUDLayer/Interface" instance=ExtResource( 21 )]
margin_left = 652.0
margin_top = 530.0
margin_right = 769.0
margin_bottom = 567.0

[node name="Label" parent="HUDLayer/Interface/EggCounter" index="0"]
text = "0/6"

[node name="TextureRect" parent="HUDLayer/Interface/EggCounter" index="1"]
margin_left = 12.735
margin_top = -39.7343
margin_right = 92.735
margin_bottom = 90.2657
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 17 )
stretch_mode = 4

[node name="LevelLayer" type="CanvasLayer" parent="."]
layer = 0
follow_viewport_enable = true

[node name="Player" parent="LevelLayer" instance=ExtResource( 4 )]
position = Vector2( 5096.82, 3254.66 )
collision_mask = 2147483649

[node name="SpawnEnemyTimer" type="Timer" parent="LevelLayer"]
wait_time = 0.458

[node name="SpawnItemTimer" type="Timer" parent="LevelLayer"]
wait_time = 2.0

[node name="InitPersonPath" type="Path2D" parent="LevelLayer"]
visible = false
position = Vector2( -129.849, -109.044 )
curve = SubResource( 1 )

[node name="InitPosition" type="PathFollow2D" parent="LevelLayer/InitPersonPath"]

[node name="Shelf" parent="LevelLayer" instance=ExtResource( 18 )]
position = Vector2( 4451.99, 2771.11 )
mode = 1

[node name="Shelf2" parent="LevelLayer" instance=ExtResource( 18 )]
position = Vector2( 4143.4, 2771.11 )
mode = 1

[node name="Shelf3" parent="LevelLayer" instance=ExtResource( 18 )]
position = Vector2( 3834.49, 2771.11 )
mode = 1

[node name="Shelf4" parent="LevelLayer" instance=ExtResource( 18 )]
position = Vector2( 3525.9, 2771.11 )
mode = 1

[node name="Shelf5" parent="LevelLayer" instance=ExtResource( 18 )]
position = Vector2( 3215.53, 2771.11 )
mode = 1

[node name="Shelf6" parent="LevelLayer" instance=ExtResource( 18 )]
position = Vector2( 2906.94, 2771.11 )
mode = 1

[node name="Shelf7" parent="LevelLayer" instance=ExtResource( 18 )]
position = Vector2( 2598.03, 2771.11 )
mode = 1

[node name="Shelf8" parent="LevelLayer" instance=ExtResource( 18 )]
position = Vector2( 2289.44, 2771.11 )
mode = 1

[node name="Shelf9" parent="LevelLayer" instance=ExtResource( 18 )]
position = Vector2( 1980.61, 2771.11 )
mode = 1

[node name="Shelf10" parent="LevelLayer" instance=ExtResource( 18 )]
position = Vector2( 1672.02, 2771.11 )
mode = 1

[node name="Shelf11" parent="LevelLayer" instance=ExtResource( 18 )]
position = Vector2( 1363.11, 2771.11 )
mode = 1

[node name="Shelf12" parent="LevelLayer" instance=ExtResource( 18 )]
position = Vector2( 1054.52, 2771.11 )
mode = 1

[node name="Shelf13" parent="LevelLayer" instance=ExtResource( 18 )]
position = Vector2( 4741.25, 2199.3 )
mode = 1

[node name="Shelf14" parent="LevelLayer" instance=ExtResource( 18 )]
position = Vector2( 4432.66, 2199.3 )
mode = 1

[node name="Shelf15" parent="LevelLayer" instance=ExtResource( 18 )]
position = Vector2( 4123.75, 2199.3 )
mode = 1

[node name="Shelf16" parent="LevelLayer" instance=ExtResource( 18 )]
position = Vector2( 3815.16, 2199.3 )
mode = 1

[node name="Shelf17" parent="LevelLayer" instance=ExtResource( 18 )]
position = Vector2( 3504.8, 2199.3 )
mode = 1

[node name="Shelf18" parent="LevelLayer" instance=ExtResource( 18 )]
position = Vector2( 3196.21, 2199.3 )
mode = 1

[node name="Shelf19" parent="LevelLayer" instance=ExtResource( 18 )]
position = Vector2( 2887.3, 2199.3 )
mode = 1

[node name="Shelf20" parent="LevelLayer" instance=ExtResource( 18 )]
position = Vector2( 2578.71, 2199.3 )
mode = 1

[node name="Shelf21" parent="LevelLayer" instance=ExtResource( 18 )]
position = Vector2( 2269.88, 2199.3 )
mode = 1

[node name="Shelf22" parent="LevelLayer" instance=ExtResource( 18 )]
position = Vector2( 1961.29, 2199.3 )
mode = 1

[node name="Shelf23" parent="LevelLayer" instance=ExtResource( 18 )]
position = Vector2( 1652.38, 2199.3 )
mode = 1

[node name="Shelf24" parent="LevelLayer" instance=ExtResource( 18 )]
position = Vector2( 1343.79, 2199.3 )
mode = 1

[node name="Shelf25" parent="LevelLayer" instance=ExtResource( 18 )]
position = Vector2( 4478.89, 1591.31 )
mode = 1

[node name="Shelf26" parent="LevelLayer" instance=ExtResource( 18 )]
position = Vector2( 4170.3, 1591.31 )
mode = 1

[node name="Shelf27" parent="LevelLayer" instance=ExtResource( 18 )]
position = Vector2( 3861.4, 1591.31 )
mode = 1

[node name="Shelf28" parent="LevelLayer" instance=ExtResource( 18 )]
position = Vector2( 3552.8, 1591.31 )
mode = 1

[node name="Shelf29" parent="LevelLayer" instance=ExtResource( 18 )]
position = Vector2( 3242.44, 1591.31 )
mode = 1

[node name="Shelf30" parent="LevelLayer" instance=ExtResource( 18 )]
position = Vector2( 2933.85, 1591.31 )
mode = 1

[node name="Shelf31" parent="LevelLayer" instance=ExtResource( 18 )]
position = Vector2( 2624.94, 1591.31 )
mode = 1

[node name="Shelf32" parent="LevelLayer" instance=ExtResource( 18 )]
position = Vector2( 2316.35, 1591.31 )
mode = 1

[node name="Shelf33" parent="LevelLayer" instance=ExtResource( 18 )]
position = Vector2( 2007.52, 1591.31 )
mode = 1

[node name="Shelf34" parent="LevelLayer" instance=ExtResource( 18 )]
position = Vector2( 1698.93, 1591.31 )
mode = 1

[node name="Shelf35" parent="LevelLayer" instance=ExtResource( 18 )]
position = Vector2( 1390.02, 1591.31 )
mode = 1

[node name="Shelf36" parent="LevelLayer" instance=ExtResource( 18 )]
position = Vector2( 1081.43, 1591.31 )
mode = 1

[node name="Shelf37" parent="LevelLayer" instance=ExtResource( 18 )]
position = Vector2( 4768.16, 995.14 )
mode = 1

[node name="Shelf38" parent="LevelLayer" instance=ExtResource( 18 )]
position = Vector2( 4459.57, 995.14 )
mode = 1

[node name="Shelf39" parent="LevelLayer" instance=ExtResource( 18 )]
position = Vector2( 4150.66, 995.14 )
mode = 1

[node name="Shelf40" parent="LevelLayer" instance=ExtResource( 18 )]
position = Vector2( 3842.07, 995.14 )
mode = 1

[node name="Shelf41" parent="LevelLayer" instance=ExtResource( 18 )]
position = Vector2( 3531.71, 995.14 )
mode = 1

[node name="Shelf42" parent="LevelLayer" instance=ExtResource( 18 )]
position = Vector2( 3223.12, 995.14 )
mode = 1

[node name="Shelf43" parent="LevelLayer" instance=ExtResource( 18 )]
position = Vector2( 2914.21, 995.14 )
mode = 1

[node name="Shelf44" parent="LevelLayer" instance=ExtResource( 18 )]
position = Vector2( 2605.62, 995.14 )
mode = 1

[node name="Shelf45" parent="LevelLayer" instance=ExtResource( 18 )]
position = Vector2( 2296.79, 995.14 )
mode = 1

[node name="Shelf46" parent="LevelLayer" instance=ExtResource( 18 )]
position = Vector2( 1988.2, 995.14 )
mode = 1

[node name="Shelf47" parent="LevelLayer" instance=ExtResource( 18 )]
position = Vector2( 1679.29, 995.14 )
mode = 1

[node name="Shelf48" parent="LevelLayer" instance=ExtResource( 18 )]
position = Vector2( 1370.7, 995.14 )
mode = 1

[node name="Shelf49" parent="LevelLayer" instance=ExtResource( 18 )]
position = Vector2( 4472.17, 450.239 )
mode = 1

[node name="Shelf50" parent="LevelLayer" instance=ExtResource( 18 )]
position = Vector2( 4163.58, 450.239 )
mode = 1

[node name="Shelf51" parent="LevelLayer" instance=ExtResource( 18 )]
position = Vector2( 3854.67, 450.239 )
mode = 1

[node name="Shelf52" parent="LevelLayer" instance=ExtResource( 18 )]
position = Vector2( 3546.08, 450.239 )
mode = 1

[node name="Shelf53" parent="LevelLayer" instance=ExtResource( 18 )]
position = Vector2( 3235.71, 450.239 )
mode = 1

[node name="Shelf54" parent="LevelLayer" instance=ExtResource( 18 )]
position = Vector2( 2927.12, 450.239 )
mode = 1

[node name="Shelf55" parent="LevelLayer" instance=ExtResource( 18 )]
position = Vector2( 2618.22, 450.239 )
mode = 1

[node name="Shelf56" parent="LevelLayer" instance=ExtResource( 18 )]
position = Vector2( 2309.62, 450.239 )
mode = 1

[node name="Shelf57" parent="LevelLayer" instance=ExtResource( 18 )]
position = Vector2( 2000.79, 450.239 )
mode = 1

[node name="Shelf58" parent="LevelLayer" instance=ExtResource( 18 )]
position = Vector2( 1692.2, 450.239 )
mode = 1

[node name="Shelf59" parent="LevelLayer" instance=ExtResource( 18 )]
position = Vector2( 1383.29, 450.239 )
mode = 1

[node name="Shelf60" parent="LevelLayer" instance=ExtResource( 18 )]
position = Vector2( 1074.7, 450.239 )
mode = 1

[node name="Wall2" parent="LevelLayer" instance=ExtResource( 16 )]
position = Vector2( 466.978, -30.0134 )
mode = 1

[node name="Wall49" parent="LevelLayer" instance=ExtResource( 16 )]
position = Vector2( 158.978, -30.0134 )
mode = 1

[node name="Wall3" parent="LevelLayer" instance=ExtResource( 16 )]
position = Vector2( 778.063, -28.6832 )
mode = 1

[node name="Wall4" parent="LevelLayer" instance=ExtResource( 16 )]
position = Vector2( 1088.3, -28.6355 )
mode = 1

[node name="Wall17" parent="LevelLayer" instance=ExtResource( 16 )]
position = Vector2( 5115.59, -20.8317 )
mode = 1

[node name="Wall18" parent="LevelLayer" instance=ExtResource( 16 )]
position = Vector2( 5426.52, -19.6049 )
mode = 1

[node name="Wall19" parent="LevelLayer" instance=ExtResource( 16 )]
position = Vector2( 5545.61, 105.725 )
rotation = 1.5708
mode = 1

[node name="Wall20" parent="LevelLayer" instance=ExtResource( 16 )]
position = Vector2( 5546.72, 415.528 )
rotation = 1.5708
mode = 1

[node name="Wall21" parent="LevelLayer" instance=ExtResource( 16 )]
position = Vector2( 5545.61, 720.049 )
rotation = 1.5708
mode = 1

[node name="Wall22" parent="LevelLayer" instance=ExtResource( 16 )]
position = Vector2( 5546.72, 1029.85 )
rotation = 1.5708
mode = 1

[node name="Wall23" parent="LevelLayer" instance=ExtResource( 16 )]
position = Vector2( 5548.44, 1338.92 )
rotation = 1.5708
mode = 1

[node name="Wall24" parent="LevelLayer" instance=ExtResource( 16 )]
position = Vector2( 5549.55, 1648.72 )
rotation = 1.5708
mode = 1

[node name="Wall25" parent="LevelLayer" instance=ExtResource( 16 )]
position = Vector2( 5548.44, 1953.24 )
rotation = 1.5708
mode = 1

[node name="Wall26" parent="LevelLayer" instance=ExtResource( 16 )]
position = Vector2( 5549.55, 2263.05 )
rotation = 1.5708
mode = 1

[node name="Wall27" parent="LevelLayer" instance=ExtResource( 16 )]
position = Vector2( 5553.19, 2570.94 )
rotation = 1.5708
mode = 1

[node name="Wall28" parent="LevelLayer" instance=ExtResource( 16 )]
position = Vector2( 5554.31, 2880.74 )
rotation = 1.5708
mode = 1

[node name="Wall29" parent="LevelLayer" instance=ExtResource( 16 )]
position = Vector2( 5553.19, 3185.26 )
rotation = 1.5708
mode = 1

[node name="Wall30" parent="LevelLayer" instance=ExtResource( 16 )]
position = Vector2( 5554.31, 3495.06 )
rotation = 1.5708
mode = 1

[node name="Wall50" parent="LevelLayer" instance=ExtResource( 16 )]
position = Vector2( -6.21143, 404.849 )
rotation = 1.5708
mode = 1

[node name="Wall61" parent="LevelLayer" instance=ExtResource( 16 )]
position = Vector2( -6.21143, 100.849 )
rotation = 1.5708
mode = 1

[node name="Wall51" parent="LevelLayer" instance=ExtResource( 16 )]
position = Vector2( -7.32471, 709.371 )
rotation = 1.5708
mode = 1

[node name="Wall52" parent="LevelLayer" instance=ExtResource( 16 )]
position = Vector2( -6.21143, 1019.17 )
rotation = 1.5708
mode = 1

[node name="Wall53" parent="LevelLayer" instance=ExtResource( 16 )]
position = Vector2( -4.49658, 1328.24 )
rotation = 1.5708
mode = 1

[node name="Wall54" parent="LevelLayer" instance=ExtResource( 16 )]
position = Vector2( -3.3833, 1638.04 )
rotation = 1.5708
mode = 1

[node name="Wall55" parent="LevelLayer" instance=ExtResource( 16 )]
position = Vector2( -4.49658, 1942.56 )
rotation = 1.5708
mode = 1

[node name="Wall56" parent="LevelLayer" instance=ExtResource( 16 )]
position = Vector2( -3.3833, 2252.37 )
rotation = 1.5708
mode = 1

[node name="Wall57" parent="LevelLayer" instance=ExtResource( 16 )]
position = Vector2( 0.260254, 2560.26 )
rotation = 1.5708
mode = 1

[node name="Wall58" parent="LevelLayer" instance=ExtResource( 16 )]
position = Vector2( 1.37354, 2870.06 )
rotation = 1.5708
mode = 1

[node name="Wall59" parent="LevelLayer" instance=ExtResource( 16 )]
position = Vector2( 0.260254, 3174.58 )
rotation = 1.5708
mode = 1

[node name="Wall60" parent="LevelLayer" instance=ExtResource( 16 )]
position = Vector2( 1.37354, 3484.39 )
rotation = 1.5708
mode = 1

[node name="Wall5" parent="LevelLayer" instance=ExtResource( 16 )]
position = Vector2( 1397.39, -28.0654 )
mode = 1

[node name="Wall6" parent="LevelLayer" instance=ExtResource( 16 )]
position = Vector2( 1708.33, -26.8386 )
mode = 1

[node name="Wall7" parent="LevelLayer" instance=ExtResource( 16 )]
position = Vector2( 2019.41, -25.5084 )
mode = 1

[node name="Wall8" parent="LevelLayer" instance=ExtResource( 16 )]
position = Vector2( 2329.65, -25.4607 )
mode = 1

[node name="Wall9" parent="LevelLayer" instance=ExtResource( 16 )]
position = Vector2( 2635.56, -24.8906 )
mode = 1

[node name="Wall10" parent="LevelLayer" instance=ExtResource( 16 )]
position = Vector2( 2946.5, -23.6638 )
mode = 1

[node name="Wall11" parent="LevelLayer" instance=ExtResource( 16 )]
position = Vector2( 3257.58, -22.3336 )
mode = 1

[node name="Wall12" parent="LevelLayer" instance=ExtResource( 16 )]
position = Vector2( 3567.82, -22.2859 )
mode = 1

[node name="Wall13" parent="LevelLayer" instance=ExtResource( 16 )]
position = Vector2( 3876.91, -21.7158 )
mode = 1

[node name="Wall14" parent="LevelLayer" instance=ExtResource( 16 )]
position = Vector2( 4187.85, -20.489 )
mode = 1

[node name="Wall15" parent="LevelLayer" instance=ExtResource( 16 )]
position = Vector2( 4498.93, -19.1588 )
mode = 1

[node name="Wall16" parent="LevelLayer" instance=ExtResource( 16 )]
position = Vector2( 4809.17, -19.1111 )
mode = 1

[node name="Wall31" parent="LevelLayer" instance=ExtResource( 16 )]
position = Vector2( 124.004, 3599.52 )
mode = 1

[node name="Wall32" parent="LevelLayer" instance=ExtResource( 16 )]
position = Vector2( 434.942, 3600.75 )
mode = 1

[node name="Wall33" parent="LevelLayer" instance=ExtResource( 16 )]
position = Vector2( 746.027, 3602.08 )
mode = 1

[node name="Wall34" parent="LevelLayer" instance=ExtResource( 16 )]
position = Vector2( 1056.26, 3602.13 )
mode = 1

[node name="Wall35" parent="LevelLayer" instance=ExtResource( 16 )]
position = Vector2( 5083.55, 3609.93 )
mode = 1

[node name="Wall36" parent="LevelLayer" instance=ExtResource( 16 )]
position = Vector2( 5394.49, 3611.16 )
mode = 1

[node name="Wall37" parent="LevelLayer" instance=ExtResource( 16 )]
position = Vector2( 1365.35, 3602.7 )
mode = 1

[node name="Wall38" parent="LevelLayer" instance=ExtResource( 16 )]
position = Vector2( 1676.29, 3603.93 )
mode = 1

[node name="Wall39" parent="LevelLayer" instance=ExtResource( 16 )]
position = Vector2( 1987.37, 3605.26 )
mode = 1

[node name="Wall40" parent="LevelLayer" instance=ExtResource( 16 )]
position = Vector2( 2297.61, 3605.3 )
mode = 1

[node name="Wall41" parent="LevelLayer" instance=ExtResource( 16 )]
position = Vector2( 2603.52, 3605.87 )
mode = 1

[node name="Wall42" parent="LevelLayer" instance=ExtResource( 16 )]
position = Vector2( 2914.46, 3607.1 )
mode = 1

[node name="Wall43" parent="LevelLayer" instance=ExtResource( 16 )]
position = Vector2( 3225.55, 3608.43 )
mode = 1

[node name="Wall44" parent="LevelLayer" instance=ExtResource( 16 )]
position = Vector2( 3535.79, 3608.48 )
mode = 1

[node name="Wall45" parent="LevelLayer" instance=ExtResource( 16 )]
position = Vector2( 3844.87, 3609.05 )
mode = 1

[node name="Wall46" parent="LevelLayer" instance=ExtResource( 16 )]
position = Vector2( 4155.81, 3610.28 )
mode = 1

[node name="Wall47" parent="LevelLayer" instance=ExtResource( 16 )]
position = Vector2( 4466.9, 3611.61 )
mode = 1

[node name="Wall48" parent="LevelLayer" instance=ExtResource( 16 )]
position = Vector2( 4777.13, 3611.65 )
mode = 1

[node name="BackgroundLayer" type="CanvasLayer" parent="."]
layer = -1
follow_viewport_enable = true

[node name="ObjectiveLabel" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -165.0
margin_top = -146.5
margin_right = 41.0
margin_bottom = -59.5
theme = ExtResource( 20 )
text = "Groceries list says
 * 6 eggs
	find'em..."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ObjectiveSprite" type="Sprite" parent="."]
visible = false
position = Vector2( 453.905, 274.801 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 17 )
[connection signal="alcohol_hit" from="LevelLayer/Player" to="HUDLayer/Interface" method="_on_Player_alcohol_hit"]
[connection signal="alcohol_timeout" from="LevelLayer/Player" to="HUDLayer/Interface" method="_on_Player_alcohol_timeout"]
[connection signal="alcohol_update" from="LevelLayer/Player" to="HUDLayer/Interface" method="_on_Player_alcohol_update"]
[connection signal="cds_hit" from="LevelLayer/Player" to="HUDLayer/Interface" method="_on_Player_cds_hit"]
[connection signal="cds_timeout" from="LevelLayer/Player" to="HUDLayer/Interface" method="_on_Player_cds_timeout"]
[connection signal="cds_update" from="LevelLayer/Player" to="HUDLayer/Interface" method="_on_Player_cds_update"]
[connection signal="egg_hit" from="LevelLayer/Player" to="." method="_on_Player_egg_hit"]
[connection signal="end_level" from="LevelLayer/Player" to="." method="_on_Player_end_level"]
[connection signal="hit" from="LevelLayer/Player" to="HUDLayer/Interface" method="_on_Player_hit"]
[connection signal="permit_update" from="LevelLayer/Player" to="HUDLayer/Interface" method="_on_Player_permit_update"]
[connection signal="timeout" from="LevelLayer/SpawnEnemyTimer" to="." method="_on_SpawnEnemyTimer_timeout"]
[connection signal="timeout" from="LevelLayer/SpawnItemTimer" to="." method="_on_SpawnItemTimer_timeout"]

[editable path="HUDLayer/Interface"]

[editable path="HUDLayer/Interface/EggCounter"]
